# Ars_Magica_DieRoller

./: .gitignore  README  pyproject.toml
.github/workflows/: ci.yml
am5dieroller/ars_magic_rolls/: simple.py
am5dieroller/ars_magica_rolls/: botch.py  formulaic.py  simple.py  spont_rolls.py  stressed.py  utils.py
am5dieroller/ars_magica_rolls/tests/: test_botch.py  test_die_roller.py  test_formulaic.py  test_simple.py  test_spont.py  test_stressed.py
am5dieroller/bot/: internal.py  main.py
am5dieroller/bot/tests/: test_bot.py  test_bot_internals.py
ars_magic_rolls/: __init__.py  formulaic.py  stressed.py  utils.py
ars_magic_rolls/tests/: test_die_roller.py  test_formulaic.py  test_simple.py  test_spont.py  test_stressed.py
